configured app.js and created routes for home page

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a simple RESTful web application for bookstore",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Shreyas Sule",
   "license": "ISC",
